van Schravendijk: brief description of content.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -291,8 +291,13 @@
       <li lang="nl">van Schravendijk, Chris:
         <i class="booktitle">Wetenschappelijk denken. Een inleiding voor de medische en biomedische wetenschappen</i>.
         Tweede, herziene druk. Leuven: Acco, 2012. (247 p.)
-        <a href=""><abbr>ISBN</abbr> 978-90-334-8933-4</a>.
-        <br />
+        <a href="https://www.acco.be/nl-be/items/9789033489334/Wetenschappelijk-denken"><abbr>ISBN</abbr> 978-90-334-8933-4</a>.
+        <br /><span lang="en">
+        </span>The first part of the book explains the development of the scientific worldview, 
+        then discusses scientific thinking as a method, as a social phenomenon, 
+        and how scientific thinking works in practice. The final chapter is about getting a PhD.
+        Most chapters contain some content that is specific to medicine and biomedicine,
+        but most content has a more general relevance.
       </li>
     </ul>
 
