Chalmers: What Is This Thing ...: contents.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -254,7 +254,18 @@
         Indianapolis/Cambridge: Hackett Publishing, 2013 (282 p.) 
         <abbr>ISBN</abbr> <a href="http://www.hackettpublishing.com/philosophy/philosophy-science/what-is-this-thing-called-science-fourth-edition">978-1-62466-038-2</a>. 
         McGrawHill, 2013 (316 p.) 
-        <abbr>ISBN</abbr> <a href="http://www.mcgraw-hill.com.au/html/9780335262786.html">978 03 35 26 27 86</a>. 
+        <abbr>ISBN</abbr> <a href="http://www.mcgraw-hill.com.au/html/9780335262786.html">978 03 35 26 27 86</a>.
+        <br />This is a thorough introduction that covers neopositivism, <span lang="de">Karl Raimund Popper</span>, 
+        Thomas Kuhn, Imre Lakatos, Paul Feyerabend, Bayesian philosophy of science (which many other introductions don't cover),
+        and realism versus anti-realism.
+        Like most other introductions, it does not consider the humanities as sciences. 
+        <br />The German translation of this book, <i class="booktitle" lang="de">Wege der Wissenschaft</i>, is based on
+        the third edition from 1999, not on the fourth and last edition. One of the benefits of this translation is
+        the addition of a German bibliography at the end of the book. This bibliography contains over 300 titles,
+        organised in categories such as reference works, compendiums, general introductions, 
+        philosophy of science (and epistemology) in specific schools of philosophy,
+        and philosophy of science for specific disciplines (psychology, economics, law, history,
+        literature, etc.) and bibliographical works.
       </li>
       <li lang="de">Wiltsche, Harald A.: 
         <span class="booktitle">Einführung in die Wissenschaftstheorie</span>. 
