Philosophy of science: anthologies.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -214,7 +214,7 @@
         not</q> (p. 1). In spite of this this casual dismissal, the book
         is highly recommended for readers who want a first introduction to
         philosophy of science. 
-        The book ends with suggestions for futher reading for each chapter.
+        The book ends with suggestions for further reading for each chapter.
       </li>
       <li lang="fr"><a href="https://fr.wikipedia.org/wiki/Dominique_Lecourt"
         hreflang="fr">Lecourt, Dominique</a>: 
@@ -274,8 +274,15 @@
       </li>
       <li><a href="https://en.wikipedia.org/wiki/Tim_Lewens">Lewens, Tim</a>: 
         <span class="booktitle">The Meaning of Science: A Pelican Introduction</span>. Pelican, 2015. 
-        <abbr>ISBN</abbr> <a href="http://www.penguin.co.uk/books/the-meaning-of-science/9780141977423/">978-0-141-97742-3</a>. 
+        <abbr>ISBN</abbr> <a href="http://www.penguin.co.uk/books/the-meaning-of-science/9780141977423/">978-0-141-97742-3</a>.
+        <br />The first chapters in this book discusses philosophy of science mainly through
+        the theories of <span lang="de">Karl R. Popper</span> and Thomas Kuhn;
+        later chapters discuss topics such as the limits of science, the relationship between science and society,
+        and realism versus anti-realism.
       </li>
+    </ul>
+    <p>Other introductions:</p>
+    <ul>
       <li>Rosenberg, Alex:
         <span class="booktitle">Philosophy of Science: A Contemporary Introduction</span>.
         Third edition. Routledge, 2012. (308 p.) 
@@ -339,6 +346,38 @@
         <a href="http://www.springer.com/de/book/9783642377891"><abbr>ISBN</abbr> 978-3-642-37789-1</a> (paperback).<br />
         This is a book about the central concepts and questions in 
         quantum physics for physicists and philosophers.
+      </li>
+    </ul>
+
+    <h2>Anthologies</h2>
+    <ul>
+      <li>Balashov, Yuri; Rosenberg, Alex, <abbr>eds.</abbr>: 
+        <i class="booktitle">Philosophy of Science: Contemporary Readings</i>. 
+        Routledge Contemporary Readings in Philosophy. Taylor &amp; Francis, 2001. (544 p.) 
+        <a href="http://www.taylorandfrancis.com/books/details/9780415257824/"><abbr>ISBN</abbr> 978-0-415-25782-4</a>. 
+        <br />Companion volume to Alex Rosenberg’s <i class="booktitle">Philosophy of Science: A Contemporary Introduction</i>.
+      </li>
+      <li>Cover, J. A.; Curd, Martin; Pincock, Christopher, <abbr>eds.</abbr>: 
+        <i class="booktitle">Philosophy of Science: The Central Issues</i>. Second edition. 
+        W. W. Norton, 2012. (1393 p.) 
+        <a href="http://books.wwnorton.com/books/detail.aspx?id=4294969958"><abbr>ISBN</abbr> 978-03 93 91 90 35</a>. 
+      </li>
+      <li lang="fr">Braunstein, Jean-François, <abbr>dir.</abbr>: 
+        <i class="booktitle">Textes Clés de l’histoire des sciences. Méthodes, styles et controverses</i>. 
+        Textes clés. Vrin, 2008. (384 p.) 
+        <a href="http://www.vrin.fr/book.php?code=9782711619337"><abbr>ISBN</abbr> 978-2-7116-1933-7</a>.
+        <br /><span lang="en">This anthology contains texts by G. Bachelard, G. Canguilhem, 
+        A. Comte, A. Crombie, L. Daston, P. Duhem, L. Fleck, M. Foucault, A. Koyré, 
+        T. Kuhn, P. Laffitte, R.K. Merton and P. Tannery.
+        </span>
+      </li>
+      <li lang="de">Gadenne, Volker; Visintin, Aldo, <abbr>Hrsg.</abbr>: 
+        <i class="booktitle">Wissenschaftsphilosophie</i>. Alber-Texte Philosophie. 
+        Freiburg; München: Karl Alber, 1999. (192 p.) 
+        <a href="http://www.verlag-alber.de/suche/details_html?k_tnr=48005"><abbr>ISBN</abbr> 978-3-495-48005-2</a>. 
+        <br /><span lang="en">A rather short anthology that starts with 
+        Francis Bacon's <a href="https://en.wikipedia.org/wiki/Novum_Organum" class="booktitle">Novum Organum</a>.
+        The authors provide an introduction to each of the texts.</span>
       </li>
     </ul>
 
