Philosophy of science: more online resources.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -421,6 +421,24 @@
 
     <h2>Other Resources</h2>
     <ul>
+      <li>
+        <a href="http://journal.philsci.org/" class="journal">Philosophy of Science</a>
+        is the official journal of the 
+        <a href="http://philsci.org/">Philosophy of Science Association</a>.
+        (It is <a href="http://www.press.uchicago.edu/ucp/journals/journal/phos.html">published by The University of Chicago Press</a>.)
+      </li>
+      <li><a href="http://undsci.berkeley.edu/article/philosophy">The philosophy of science</a>
+        by the <i>Understanding Science</i> project, is a short article that explains what
+        kinds of questions philosophy of science is concerned with, and lists some major 
+        ideas and figures.
+      </li>
+      <li>The category of articles related to 
+        <a href="http://www.iep.utm.edu/category/s-l-m/science/">philosophy of science</a>
+        in the
+        <i class="website">Internet Encyclopedia of Philosophy</i>.
+        Authors who contribute articles to this encyclopedia must have a <abbr>PhD</abbr> in philosophy. 
+        The encyclopedia has no general article on philosophy of science.
+      </li>
       <li>The biochemist Laurence T. Moran has written many 
         <a href="http://sandwalk.blogspot.de/search/label/Philosophy%20of%20Science">blog posts related to philosophy of science</a>.
         The blog posts cover topics such as methodological naturalism, the demarcation between science and pseudoscience,
