+ History of medicine.

--- a/science/index.html
+++ b/science/index.html
@@ -247,6 +247,39 @@
       <abbr>ISBN</abbr> <a href="http://ukcatalogue.oup.com/product/9780195030853.do">978-0-19-503085-3</a>.
     </ul>
 
+    <h3>History of Medicine</h3>
+    <ul>
+      <li>Wynum, William:
+        <i class="booktitle">The History of Medicine: A Very Short Introduction</i>.
+        Oxford University Press, 2008. (184 p.)
+        <a href="https://global.oup.com/academic/product/the-history-of-medicine-a-very-short-introduction-9780199215430"><abbr>ISBN</abbr> 9780199215430</a>.
+      </li>
+      <li>Porter, Roy:
+        <i class="booktitle">The Greatest Benefit to Mankind: A Medical History of Humanity</i>.
+        Fontana, 1999. (For the general public; possibly out of print.)
+      </li>
+      <li>Porter, Roy, <abbr>ed.</abbr>:
+        <i class="booktitle">The Cambridge History of Medicine</i>.
+        Cambridge University Press, 2006. (416 p.)
+        <a href="http://www.cambridge.org/be/academic/subjects/history/history-medicine/cambridge-history-medicine"><abbr>ISBN</abbr> 9780521682893</a>.
+      </li>
+      <li>Jackson, Marc, <abbr>ed.</abbr>:
+        <i class="booktitle">The Oxford Handbook of the History of Medicine</i>.
+        Oxford University Press, 2013. (692 p.)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-the-history-of-medicine-9780199668397"><abbr>ISBN</abbr> 9780199668397</a>.
+      </li>
+      <li>Conrad, Lawrence I.; Neve, Michael; Nutton, Vivian; Porter, Roy; Wear, Andrew:
+        <i class="booktitle">The Western Medical Tradition: 800 <abbr>BC</abbr> to <abbr>AD</abbr> 1800</i>.
+        Cambridge University Press, 1995. (574 p.)
+        <a href="http://www.cambridge.org/be/academic/subjects/history/history-medicine/western-medical-tradition-800-bc-ad-1800?format=PB"><abbr>ISBN</abbr> 9780521475648</a>.
+      </li>
+      <li>Bynum, W. F.; Hardy, Anne; Jacyna, Stephen; Lawrence, Christopher; Tansey, E. M.:
+        <i class="booktitle">The Western Medical Tradition: 1800 to 2000</i>.
+        Cambridge University Press, 2006. (630 p.)
+        <a href="http://www.cambridge.org/be/academic/subjects/history/history-medicine/western-medical-tradition-18002000?format=PB"><abbr>ISBN</abbr> 9780521475655</a>.
+      </li>
+    </ul>
+
     <!--h2>Darwin and Evolutionary Theory</h2>
     <p>There are several introductions and surveys of darwinism by philosophers.
     </p>
