+ Bertrand Russell; Dennett's website.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -873,8 +873,43 @@
       -->
     </ul>
 
+    <h3>Bertrand Russell</h3>
+    <h4>Primary Sources</h4>
+    <ul>
+      <li>Russell, Betrand:
+        <i class="booktitle">The Basic Writings of Bertrand Russell</i>. Routledge, 2009. (752 p.)
+        <a href="https://www.routledge.com/products/9780415472388"><abbr>ISBN</abbr> 9780415472388</a>.
+        <br />This collection contains essays written between 1903 and 1959 and was first published in 1961.
+        It covers the full range of subjects that Russell wrote about, such as philosophy of language,
+        logic, philosophy of mathematics, epistemology, history of philosophy, psychology,
+        morals, politics and religion.
+      </li>
+    </ul>
+    <h4>Secondary Sources</h4>
+    <ul>
+      <li><a href="http://users.drew.edu/jlenz/brs.html">The Bertrand Russell Society</a>.
+        One of the pages on the website is a list of
+        <a href="http://users.drew.edu/jlenz/brtexts.html">writings by Bertrand Russell</a>
+        that are available online. For a more detailed bibliography, see
+        <a href="http://users.drew.edu/jlenz/br-bib-articles.html">A Concise Bibliography of Bertrand Russell’s Works</a>.
+      </li>
+      <li>Ayer, A. J.:
+        <i class="booktitle">Bertrand Russell</i>. University of Chicago Press, 1972. (175 p.)
+        <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo3640036.html"><abbr>ISBN</abbr> 9780226033433</a>.
+      </li>
+      <li>Ongley, John; Carey, Rosalind: 
+        <i class="booktitle">Russell: A Guide for the Perplexed</i>. Guides for the Perplexed. Bloomsbury, 2013. (224 p.)
+        <a href="http://www.bloomsbury.com/uk/russell-a-guide-for-the-perplexed-9780826497543/"><abbr>ISBN</abbr> 9780826497543</a>.
+        <br />This book won the 2014 Bertrand Russell Society Book Award.
+      </li>
+    </ul>
+
     <h3>Daniel Dennett</h3>
     <ul>
+      <li><a href="http://ase.tufts.edu/cogstud/dennett/">Daniel C. Dennett</a>:
+        Dennett's web page on the website of Tufts University. 
+        See also <a href="http://ase.tufts.edu/cogstud/dennett/bibliography.html">Dennett's bibliography</a>.
+      </li>
       <li>Zawidzki, Tadeusz:
         <span class="booktitle">Dennett</span>. Oneworld Thinkers.
         Oneworld Publications,<!-- May --> 2007.
