--- a/science/index.html
+++ b/science/index.html
@@ -301,6 +301,10 @@
         writing at a more technical philosophy of science level."
         (Amazon.com reviewer).
       </li>
+      <li><a href="http://www.evolutietheorie.ugent.be/" lang="nl">evolutietheorie.be</a>:
+        This website is the result of a Flemish project (2007-2011) that wanted to
+        promote a better understanding of evolutionary theory in Flanders.
+      </li>
     </ul-->
 
     <h2>Registering All Medical Trials</h2>
