+ deLaplante: Critical Thinking About Science.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -101,6 +101,11 @@
         hreflang="fr">Étienne Klein</a>.
         (9 videos, on average 15 minutes long).
       </li>
+      <li>Kevin deLaplante: 
+        <a href="https://www.youtube.com/playlist?list=PLCPXzKiZn7OFMZJ8lhKO4aCta11yz9Mre">Critical Thinking About Science</a>
+        (2015). This is a series of six videos (between 4 and 16 minutes long) 
+        that explain what science is and and how scientific reasoning works.
+      </li>
       <li>John Wilkins: 
         <a href="https://www.youtube.com/watch?v=KHrpqc6QvME">What is the Philosophy of Science All About?</a>
         (Melbourne, Australia, 23-24 August 2014). .
