+ Critical Thinker Academy (online course).

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -655,8 +655,7 @@
         most of these focus on how to teach and assess critical thinking.
       </li>
       <li>Cecilia Mun:
-        <a href="https://www.youtube.com/watch?v=AKjxZMbYr2U">Introduction to 
-        Logic</a>.
+        <a href="https://www.youtube.com/watch?v=AKjxZMbYr2U">Introduction to Logic</a>.
         This is the first of a series of video lectures from an online 
         introduction of philosophy. The chapters from the series correspond to
         the chapters in
@@ -664,6 +663,9 @@
         class="booktitle">A Concise Introduction to Logic</a> by Patrick Hurley
         (Cengage Learning, 2014; in spite of the title, this book has 736 pages).
         <!-- ISBN-13: 9781285196541 -->
+      </li>
+      <li><a href="http://criticalthinkeracademy.com/">Critical Thinker Academy</a>:
+        online course with 18 hours of video.
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Critical_thinking">Critical thinking</a>:
@@ -929,6 +931,15 @@
       Radboud Universiteit: Verkort traject Filosofie : http://www.ru.nl/opleidingen/bachelor/filosofie/studieprogramma/verkort-traject/
     -->
 
+    <!--h3>Kazimierz Twardowski</h3>
+    <ul>
+      <li>Betti, Arianna:
+        <a href="http://plato.stanford.edu/entries/twardowski/">Kazimierz Twardowski</a>,
+        <i class="website">Stanford Encyclopedia of Philosophy</i>.
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/On_the_Content_and_Object_of_Presentations">On the Content and Object of Presentations</a> 
+      </li>
+    </ul-->
 
     <h2>Intellectual Impostures</h2>
     <ul>
