+ deLaplante: How Write Good Argumentative Essay.

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -124,7 +124,14 @@
         <a href="http://www.vdf.ethz.ch/vdf.asp?isbnNr=3645"><abbr>ISBN</abbr> 978-3-7281-3645-9</a>.
         <span lang="en">This is one of the books recommended by </span> Jonas Pfister.
       </li>
+      <li>deLaplante, Kevin:
+        <a href="https://www.youtube.com/playlist?list=PLDF3C877967DFDEC6">How to Write a Good Argumentative Essay</a>:
+        series of 12 videos (between 1 and 11 minutes long) that discusses how to write an argumetative essay;
+        it uses a sample essays to illustrate the principles presented in the videos.
+        (See also the <a href="http://kevindelaplante.com/essay-writing-course">course on Udemy.com</a>.)
+      </li>
     </ul>
+    <!-- see also Kevin deLaplante: https://www.youtube.com/user/PhilosophyFreak/playlists -->
 
     <h3>Disciplines</h3>
     <p>Philosophy has been subdivided into several disciplines such as epistemology,
