--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -726,6 +726,9 @@
         15th century to the beginning of the 18th century,
         and a few from the 19th century (especially John Stuart Mill).
       </li>
+      <li><a href="http://www.epistemelinks.com/">EpistemeLinks: Philosophy Resources on the Internet</a>
+        (no updates since 2012).
+      </li>
     </ul>
 
 
@@ -931,7 +934,7 @@
       Radboud Universiteit: Verkort traject Filosofie : http://www.ru.nl/opleidingen/bachelor/filosofie/studieprogramma/verkort-traject/
     -->
 
-    <!--h3>Kazimierz Twardowski</h3>
+    <h3>Kazimierz Twardowski</h3>
     <ul>
       <li>Betti, Arianna:
         <a href="http://plato.stanford.edu/entries/twardowski/">Kazimierz Twardowski</a>,
@@ -939,7 +942,7 @@
       </li>
       <li><a href="https://en.wikipedia.org/wiki/On_the_Content_and_Object_of_Presentations">On the Content and Object of Presentations</a> 
       </li>
-    </ul-->
+    </ul>
 
     <h2>Intellectual Impostures</h2>
     <ul>
@@ -998,6 +1001,8 @@
       * James Ladyman; Don Ross: Every Thing Must Go: Metaphysics Naturalized. Oxford University Press, 2009.
       * ? Kathryn Schulz:Being Wrong: Adventures in the Margin of Error. Ecco, 2011. 
       * ? James Robert Brown: Philosophy of Mathematics: A Contemporary Introduction to the World of Proofs and Pictures. Routledge, 2008.
+
+      * OSU - School of History, Philosophy, and Religion (Oregon State University): https://www.youtube.com/user/OSUSHPR 
     -->
   </main>
 
