+Achinstein: Science Rules.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -393,6 +393,16 @@
         Francis Bacon's <a href="https://en.wikipedia.org/wiki/Novum_Organum" class="booktitle">Novum Organum</a>.
         The authors provide an introduction to each of the texts.</span>
       </li>
+      <li>Achinstein, Peter, <abbr>ed.</abbr>:
+        <i class="booktitle">Science Rules: A Historical Introduction to Scientific Methods</i>. 
+        Baltimore &amp; London: Johns Hopkins University Press, 2004. (440 p.)
+        <a href="https://jhupbooks.press.jhu.edu/content/science-rules"><abbr>ISBN</abbr> 978 08 01 87 94 49</a>.
+        <br />This book contains selected texts on the following topics: 
+        Descartes' rationalism, Newton's inductivism, hypothetico-deductivism (Mill, Whewell, Popper),
+        realism versus antirealism (Duhem, van Fraassen, Perrin, Salmon) and 
+        universal rules of method (Galilei, Feyerabend, Kuhn). The book also contains
+        several essays by Achinstein about most of these topics.
+      </li>
     </ul>
 
     <h2>Criticism of Science and Scientism</h2>
