--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
+  <link rel="stylesheet" type="text/css" media="print" href="../css/print.css" title="Printer-friendly version" />
 </head>
 <body class="philsciencepage">
   <header>
