Achinstein's book: all theories from physics.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -402,6 +402,7 @@
         realism versus antirealism (Duhem, van Fraassen, Perrin, Salmon) and 
         universal rules of method (Galilei, Feyerabend, Kuhn). The book also contains
         several essays by Achinstein about most of these topics.
+        The examples of scientific theories in the book all come from physics.
       </li>
     </ul>
 
