+ Scientism workshop; + EPSA 2013 conf.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -412,6 +412,15 @@
         <i class="website">Wikipedia</i>.
         This article discusses various definitions of scientism.
       </li>
+      <li><a href="https://sites.google.com/site/scientismworkshop/home">Scientism Workshop</a>:
+        a workshop about the concept of scientism, organised by <span lang="it">Massimo Pigliucci</span>
+        and <span lang="nl">Maarten Boudry</span> in May 2014.
+        The <a href="https://sites.google.com/site/scientismworkshop/presentations">presentations</a> can be downloaded from the website.
+        <br />The organisers of the workshop pointed out that,
+        <q cite="https://sites.google.com/site/scientismworkshop/home">There is no agreed upon definition of the term, 
+        but as a first approximation, it describes an exaggerated deference towards science, or unwarranted belief 
+        in the superiority and universal applicability of scientific methods.</q>
+      </li>
       <li>Burnett, Thomas: <!-- @@todo download -->
         <a href="http://biologos.org/blogs/archive/what-is-scientism">What is Scientism?</a>,
         <i class="website">BioLogos</i> (blog), 11.06.2012.<br />
@@ -465,6 +474,7 @@
         ideas received negative reception in the scientific community.)
       </li>
     </ul>
+
 
     <h2>Other Resources</h2>
     <ul>
@@ -583,6 +593,11 @@
       <li>See also the articles in the category
         <a href="http://www.realclearscience.com/topic/s/Scientific_method/">Scientific method</a> 
         on the website <i class="website">Real Clear Science</i>.<!-- @@todo -->
+      </li>
+      <li><a href="http://www.helsinki.fi/epsa13/"><abbr title="European Philosophy of Science Association">EPSA</abbr> 2013 conference</a>, Helsinki, Finland:
+        the <a href="">book of abstracts</a> can be downloaded from the website. 
+        <a href="https://www.youtube.com/results?search_query=epsa13+helsinki+tint+coe">Video recordings of the presentations</a> are available on YouTube;
+        unfortunately, there is no handy playlist to make them easier to find. 
       </li>
     </ul>
   </main>
