+ Colin Frayn: Understanding Science (YT).

--- a/science/index.html
+++ b/science/index.html
@@ -42,22 +42,38 @@
   </nav>
 
   <main>
+    <!--blockquote id="introquote">
+      <p>
+        <q>Science is neither a philosophy nor a belief system.  It is a combination of mental
+        operations that has become increasingly the habit of educated peoples, a culture
+        of illuminations hit upon by a fortunate turn of history that yielded the most
+        effective way of learning about the real world ever conceived.</q>
+        <cite>E. O. Wison: <span class="booktitle">Consilience</span>. 
+          Reported in Hoyt's <span class="booktitle">New Cyclopedia Of Practical Quotations</span> (1922), p. 45.
+        </cite>
+      </p>
+    </blockquote-->
+
     <p>This page collects mostly non-academic resources about science.</p>
 
     <h2>YouTube Channels and Videos</h2>
     <ul>
+      <li>Colin Frayn:
+        <a href="https://www.youtube.com/user/ColinFrayn/videos?flow=grid&view=0&sort=da">Understanding Science</a>:
+        a series over 40 videos (each between 10 and 40 minutes long) about various sciences
+        and how science works.
+      </li>
       <li>
-        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About
-        Science</a>, the YouTube channel of the British charity
+        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About Science</a>, 
+        the YouTube channel of the British charity
         <a href="http://www.senseaboutscience.org/">Sense about Science</a>.
         <!-- @@add to separate list of sites about science / scientific literacy
           https://en.wikipedia.org/wiki/Sense_About_Science
         -->
       </li>
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLhQpDGfX5e7CuUkPlpiW7agdJvdbdTPma">Think
-        Like a Scientist</a> is a playlist of videos by the 
-        Open University.
+        <a href="https://www.youtube.com/playlist?list=PLhQpDGfX5e7CuUkPlpiW7agdJvdbdTPma">Think Like a Scientist</a> 
+        is a playlist of videos by the Open University.
         <!-- See other playlists: https://www.youtube.com/user/OUlearn/playlists?view=1&sort=dd -->
       </li>
       <li>
@@ -306,6 +322,17 @@
         promote a better understanding of evolutionary theory in Flanders.
       </li>
     </ul-->
+
+    <!-- 
+    <h2>Microbiology</h2>
+    <ul>
+      <li><a href="http://microbiologyonline.org.uk/">Microbiology Online</a>:
+        a website created by the
+        <a href="http://www.microbiologysociety.org/">Microbiology Society</a>
+        in the <abbr>UK</abbr>.
+      </li>
+    </ul>
+    -->
 
     <h2>Registering All Medical Trials</h2>
     <p>The British physician <a href="https://en.wikipedia.org/wiki/Ben_Goldacre">Ben
