Fleck: significance (sociology of knowledge).

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -96,6 +96,12 @@
       <li>Fleck was the first philosopher to look at science from a sociological point of view;
         this sociological approach did not gain popularity until the publication of 
         Thomas Kuhn's <i class="booktitle">The Structure of Scientific Revolutions</i> in 1961.
+        <br />Fleck criticised the &ldquo;heroic&rdquo; view of scientific progress that attributes
+        new discoveries to individual research instead of thought collectives.
+        <!-- Cf. EET, chapter 4.2 -->
+        (The heroic view was still present in Kuhn's work.)
+        Fleck was probably the first philosopher who pointed out the importance of 
+        the education of young researchers for the structure of a research community.<!-- Fleck, 1980: XXIV -->
       </li>
       <li>Fleck was the first philosopher of science who did not use physics as the starting point
         for his theory, unlike, for example, Popper and Kuhn. 
@@ -444,7 +450,7 @@
         <i class="journal" lang="pl">Archiwum Historji i Filozofji Medycyny oraz Historji Nauk Przyrodniczych</i>, 6: 55-64.
         <br />A German translation, &ldquo;<span lang="de">Über einige besondere Merkmale des ärztlichen Denkens. Referat gehalten auf der IV. Sitzung der Gesellschaft der Freunde der Geschichte der Medizin in Lwów</span>&rdquo;, was included in Fleck, 2011.
       </li>
-      <li lang="de">Fleck, Ludwik: 
+      <li lang="de">Fleck, Ludwik [Fleck, 1980]: 
         <i class="booktitle">Entstehung und Entwicklung einer wissenschaftlichen Tatsache - Einführung in die Lehre vom Denkstil und Denkkollektiv</i>. 
         Mit einer Einleitung herausgegeben von Lothar Schäfer und Thomas Schnelle. Suhrkamp, 1980. 
         <a href="http://www.suhrkamp.de/buecher/entstehung_und_entwicklung_einer_wissenschaftlichen_tatsache-ludwik_fleck_27912.html"><abbr>ISBN</abbr> 978-3-518-27912-0</a>.
