+ Science for All Americans (AAAS).

--- a/science/index.html
+++ b/science/index.html
@@ -138,6 +138,16 @@
 
     <h2>About Science in General</h2>
     <ul>
+      <li><abbr title="American Association for the Advancement of Science">AAAS</abbr>:
+        <a href="http://www.project2061.org/publications/sfaa/online/sfaatoc.htm" class="booktitle">Science for All Americans</a>.
+        This book about science literarcy is one of the outcomes from the <abbr>AAAS</abbr>'s
+        <a href="http://www.aaas.org/program/project2061/about">Project 2061</a>.
+        According to the 
+        <a href="http://www.project2061.org/publications/sfaa/">book description</a>,
+        is is primarely meant for 
+        <q cite="http://www.project2061.org/publications/sfaa/">educators, parents, school administrators, and policymakers</q>.
+        Oxford University Press published a printed version in 1991.
+      </li>
       <li>Angier, Natalie: 
         <i class="booktitle">The Canon: The Beautiful Basics of Science</i>.
         Faber &amp; Faber, 2008. 
@@ -439,6 +449,18 @@
     
     <!--h2>Science Myths</h2-->
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
+    <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
+      Bo Eason even claims that a Harvard professor said (2'40'' - 3'04''): "The average human being uses 5% of their brain capacity. High achievers use 20% of their brain capacity. Olympic gold medalists use 40% of their brain capacity, because mastery is the highest form of intelligence."
+      
+      Debunked at: 
+      * Association for Psychological Science: "Most People Use Only 10% of Their Brain Power": http://www.psychologicalscience.org/media/myths/myth_1.cfm (no date).
+        From 50 Great Myths of Popular Psychology: Shattering Widespread Misconceptions about Human Behavior by Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, and Barry L. Beyerstein. Copyright © 2010 by Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, and Barry L. Beyerstein.  This material is reproduced with permission of John Wiley & Sons, Inc.
+        -> Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, Barry L. Beyerstein : 50 Great Myths of Popular Psychology: Shattering Widespread Misconceptions about Human Behavior. Wiley-Blackwell, 2009. http://eu.wiley.com/WileyCDA/WileyTitle/productCd-EHEP002362.html
+      * Richard E. Cytowic: "Using Only 10 Percent of Your Brain? Think Again! ", The Fallible Mind (blog), Psychology Today, 29.11.2012.
+      * "We Only Use 10% of Our Brain Power", 10 of Psychology's Greatest Myths, RealClearScience, 04.02.14. "The myth likely stems back to American psychologist William James, who once espoused the idea that the average person rarely achieves more than 10% of their intellectual potential."
+      * "Lucy: Debunking the 10% Brain Myth", "Emory Looks at Hollywood" (w. Krish Sathian), Emory University: https://www.youtube.com/watch?v=Tt2dEep9vHA 
+      * Wikipedia: "Ten percent of the brain myth": https://en.wikipedia.org/wiki/Ten_percent_of_the_brain_myth (this is even referenced from the article about the film "Lucy": https://en.wikipedia.org/wiki/Lucy_%282014_film%29 ). 
+    -->
   </main>
   <!-- John S. Wilkins: Species: The History of an Idea. University of California Press, 2011: http://www.ucpress.edu/book.php?isbn=9780520271395 -->
 
