--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -410,10 +410,11 @@
     </p>
 
     <h2>Philosophy and Sociology of Science</h2>
+    <p>(Coming soon.)</p>
 
-    <h3>Early Phase</h3>
+    <!--h3>Early Phase</h3>
 
-    <h3><i class="booktitle">Genesis and Development of a Scientific Fact</i> (1935)</h3>
+    <h3><i class="booktitle">Genesis and Development of a Scientific Fact</i> (1935)</h3-->
     <!-- Syphilis: https://en.wikipedia.org/wiki/Syphilis (does not mention Wassermann; "Many famous historical figures, including Franz Schubert, Arthur Schopenhauer, and Édouard Manet, are believed to have had the disease.")
       History of syphilis: https://en.wikipedia.org/wiki/History_of_syphilis 
       Wassermann test: https://en.wikipedia.org/wiki/Wassermann_test 
@@ -423,7 +424,7 @@
       Die Syphilis in der Kunst und Belletristik: https://de.wikipedia.org/wiki/Syphilis#Die_Syphilis_in_der_Kunst_und_Belletristik
     -->
 
-    <h3>Last Phase</h3>
+    <!--h3>Last Phase</h3-->
 
 
     <h2>Bibliography</h2>
