Baloney detection kit; minor edits.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -216,7 +216,10 @@
 
     <!-- 
       * Prue Shaw: Reading Dante: From Here to Eternity. Liveright, 2015. http://www.amazon.com/Reading-Dante-Eternity-Prue-Shaw/dp/1631490060/ 
-      
+      * Genevieve von Petzinger: Geometric Signs - A New Understanding: http://www.bradshawfoundation.com/geometric_signs/geometric_signs.php 
+      * Genevieve von Petzinger: "Why Are These 32 Symbols Found in Caves All Over Europe", TED, August 2015: https://www.youtube.com/watch?v=hJnEQCMA5Sg 
+      * Zeresenay Alemseged: The search for humanity's roots, TED, Arusha, Tanzania, June 2007: https://www.youtube.com/watch?v=JVbl-IaklIo
+        -> https://en.wikipedia.org/wiki/Selam_%28Australopithecus%29 : Selam, "the specimen has been dated at 3.3 million years ago, approximately 120,000 years older than "Lucy" (dated to about 3.18 mya)."
     -->
   </main>
 
