--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -608,6 +608,9 @@
         &ldquo;The Fine Art of Baloney Detection&rdquo; from
         Carl Sagan's book
         <i class="booktitle">The Demon­Haunted World: Science as a Candle in the Dark</i> (1996). 
+        <br />(See also 
+        <a href="https://www.youtube.com/watch?v=eUB4j0n2UDU">Michael Shermer: Baloney Detection Kit</a>,
+        a video by the Richard Dawkins Foundation for Reason &amp; Science.)
       </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLA795AB5BDDD2B0B3">Critical 
