--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -126,6 +126,37 @@
         source is apparently https://www.youtube.com/watch?v=-suvkwNYSQo (channel: RTÉ - IRELAND’S NATIONAL PUBLIC SERVICE MEDIA) - part of an interview by Gay Byrne 
       Kwame Anthony Appiah: "Is religion good or bad? (This is a trick question)", TED, May 2014: https://www.youtube.com/watch?v=X2et2KO8gcY 
         Makes several mistakes @@todo. 
+      TestTube News: "What Is The World's Most Peaceful Religion?" https://www.youtube.com/watch?v=T0W-a8Ux0Do [Jainism - among those considered.]
+      Genevieve von Petzinger: "The Roots of Religion", TEDx Victoria: https://www.youtube.com/watch?v=4Zgwz_m7sRs / http://www.amara.org/en/videos/kO4GPJ0bFhyN/info/the-roots-of-religion-genvieve-von-petzinger-tedxvictoria/ 
+        see also http://ideopsychology.com/2015/08/06/symbolic-communication-religious-squiggle-or-box-where-when/ 
+    -->
+    <!-- Morality without religion / secular morality: 
+      Frans de Waal: "Morality without religion", TEDx Peachtree, 2011: https://www.youtube.com/watch?v=le-74R9C6Bc 
+        shows examples of co-operation between animals (indicator of empathy); consolation among chimpanzees; prosocial behaviour in chimpanzees; 
+        Sarah Brosnan's research on "[Capuchin] Monkeys reject unequal pay", Nature 425, 297-299 (18 September 2003) : 
+          http://www.nature.com/nature/journal/v425/n6955/abs/nature01963.html 
+          http://www.youtube.com/watch?v=lKhAd0Tyny0
+          http://www2.gsu.edu/~wwwcbs/pdf/BrosnanUnequalPay.pdf
+          in National Geographic: http://www.primates.com/monkeys/fairness.html 
+          (without calling it mimesis; the study received many comments from anthropologists, economists and philosophers)
+          There was even a chimpanzee who refused the grape if the other monkey did not also receive a grape (instead of cucumber)
+        (Wants to see if we can create "a morality from the bottom up", i.e. "evolved morality", 
+      Frans de Waal: "Morals Without God", Opinionator, The New York Times, @@.@@.2010: http://opinionator.blogs.nytimes.com/2010/10/17/morals-without-god/ 
+      Dave Miller: "Morality Without Religion?", Apologetics Press, 2005: http://www.apologeticspress.org/apcontent.aspx?category=7&article=1508 
+      John Shook: "Morality Without Religion", Center for Inquiry, 03.11.2010. 
+      "Morality research sheds light on the origins of religion", Cell Press, 09.02.2010: http://www.sciencedaily.com/releases/2010/02/100208123625.htm 
+      Marc Hauser and Peter Singer: "Morality without religion", 2005: http://www.qcc.cuny.edu/SocialSciences/ppecorino/INTRO_TEXT/Chapter%208%20Ethics/Reading-Morality-without-Religion.htm 
+      Todd B. Kashdan: "How Will You Teach Your Child Morality Without Religion?", Psychology Today, 20.08.2012: https://www.psychologytoday.com/blog/curious/201208/how-will-you-teach-your-child-morality-without-religion 
+      Zehra Hussain: "Morality Without Religion", Freethought Today, Vol. 23 No. 2 March 2006 [High School Essay Contest, Freedom from Religion Foundation]: http://ffrf.org/about/getting-acquainted/item/13077-morality-without-religion
+      Secular morality: https://en.wikipedia.org/wiki/Secular_morality 
+
+      Genevieve Von Petzinger: "The Roots of Religion", TEDx Victoria: 
+        120.000 years ago: start of symbolic behaviour, such as burials, shells that were probably worn, ... 
+        40.000 - 50.000 years ago: another important change (roughly when modern humans left Africa): much more symbolic practice, "the creative explosion": jewelry, burials with elaborate grave gifts.
+          E.g. Sungir, Russia, burial site, ca. 28.000 years old; with hundreds of beads.
+          E.g. impossible entities, e.g. ivory carved figurine with head of a lion and body of a human, ca. 32.000 years old.
+          E.g. cave painting of human with head of a bison: would this be a shaman wearing a mask? There is still a hunter-gatherer tribe, the San (Bushmen), that still practices rock art.
+            See https://en.wikipedia.org/wiki/David_Lewis-Williams 
     -->
     <!-- 
     <ul>
