+ Ludwik Fleck in navigation menu.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <h2>Navigation</h2>
     <ul>
       <li class="active"><a href="./index.html">Home</a></li>
-      <li><a href="./philscience/index.html">Philosophy of Science</a></li>
+      <li><a href="./philscience/index.html">Philosophy of Science</a>
+        <ul>
+          <li><a href="./philscience/fleck_ludwik.html" lang="de">Ludwig Fleck</a></li>
+        </ul>
+      </li>
       <li><a href="./philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="./philosophy/learningphilosophy.html">Learning Philosophy</a></li>
