--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -17,7 +17,11 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../philscience/index.html">Philosophy of Science</a></li>
+      <li><a href="../philscience/index.html">Philosophy of Science</a>
+        <ul>
+          <li><a href="../philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a></li>
+        </ul>
+      </li>
       <li><a href="../philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
