--- a/science/ioannidis.html
+++ b/science/ioannidis.html
@@ -17,12 +17,16 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../philscience/index.html">Philosophy of Science</a></li>
+      <li><a href="../philscience/index.html">Philosophy of Science</a>
+        <ul>
+          <li><a href="../philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a></li>
+        </ul>
+      </li>
       <li><a href="../philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
-          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li>
-          <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li-->
+          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
       </li>
       <li><a href="../science/index.html">Science</a>
